package at.htl.entity;

public enum Lessontype {
    BALLET,
    HIPHOP,
    GRUNDKURS_EINSTEIGER,
    GRUNDKURS_FORTGESCHRITTENE,
    GRUNDKURS_PROFIS
}
